fix travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ go:
   - 1.9.x
   - 1.10.x
   - tip
-install:
-  - make dependency
 script:
-  - make test
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 matrix:
