added few test fixtures

--- a/dotenv/fixtures/basic.env
+++ b/dotenv/fixtures/basic.env
@@ -1,4 +1,8 @@
-export OPTION_A='postgres://localhost:5432/database?sslmode=disable'
-export OPTION_B="postgres://localhost:5432/database?sslmode=disable"
-export OPTION_C='"postgres://localhost:5432/database?sslmode=disable"'
-export OPTION_D="'postgres://localhost:5432/database?sslmode=disable'"
+OPTION_A=foo
+OPTION_B=foo_bar
+OPTION_C=3.14
+OPTION_D=42
+_OPTION_E=foo
+____OPTION_F=bar
+                    OPTION_G=1
+       OPTION_H=2         
