--- a/dotenv/fixtures/quoted.env
+++ b/dotenv/fixtures/quoted.env
@@ -6,4 +6,11 @@ OPTION_E="1"
 OPTION_F="2"
 OPTION_G=""
 OPTION_H="\n"
-OPTION_I="echo 'asd'"
+OPTION_I="foo 'bar'"
+OPTION_J="foo\"bar\""
+OPTION_K="\"foo"
+OPTION_L='foo "bar"'
+OPTION_M='foo \bar\'
+OPTION_N='\\foo'
+OPTION_O='foo \"bar\"'
+OPTION_P='`foo bar`'
